set invoice send, and email send in App

--- a/src/Services/Dama.API/appsettings.json
+++ b/src/Services/Dama.API/appsettings.json
@@ -13,5 +13,25 @@
   "ApiSettings": {
     "API_BASIC_AUTH_CLIENT_ID": "dama.client",
     "API_BASIC_AUTH_SECRET": "dama.secret"
+  },
+  "Sage": {
+    "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
+    "SageApiBaseUrl": "https://api.sageone.com",
+    "ClientId": "3d4d1c18be8c85837d72",
+    "ClientSecret": "2b267ffcb846289eff351f405a04c4196010bffb",
+    "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
+    "CallbackURL": "http://localhost:5000/Sage/Callback",
+    "AccessTokenURL": "https://api.sageone.com/oauth2/token"
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SSL": true,
+    "SmtpUsername": "info.saborcomtradicao@gmail.com",
+    "SmtpPassword": "sabortradicao2018!",
+    "FromInfoEmail": "info.saborcomtradicao@gmail.com",
+    "FromOrderEmail": "info.saborcomtradicao@gmail.com",
+    "CCEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
   }
+  
 }
