--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -13,13 +13,15 @@
   "GroceryProductsPictureFullPath": "C:\\projects\\nsfw\\adama\\src\\Web\\Backoffice\\wwwroot\\images\\products\\",
   "GroceryProductsPictureUri": "http://localhost:5000/images/products/",
   "InvoicesFolderFullPath": "C:\\projects\\nsfw\\adama\\invoices\\",
-  "ToEmails": "joaofbbg@gmail.com",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+  "Email": {
+    "CCEmails": "joaofbbg@gmail.com"
+  },
+    "Logging": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Debug",
+        "System": "Information",
+        "Microsoft": "Information"
+      }
     }
   }
-}
