--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -13,24 +13,28 @@
   "GroceryProductsPictureFullPath": "/var/aspnetcore/damabackoffice/wwwroot/images/products/",
   "GroceryProductsPictureUri": "https://backoffice.damanojornal.com/images/products/",
   "InvoicesFolderFullPath": "/var/aspnetcore/damabackoffice/invoices/",
-  //"SmtpServer": "smtp-pt.securemail.pro",
-  //"SmtpPort": 465,
-  //"SSL": true,
-  "SmtpServer": "smtp.damanojornal.com",
-  "SmtpPort": 25,
-  "SSL": false,
-  "SmtpUsername": "info@damanojornal.com",
-  "SmtpPassword": "DamaMail2018!",
-  "FromInfoEmail": "info@damanojornal.com",
-  "FromOrderEmail": "encomendas@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com",
-  "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
-  "SageApiBaseUrl": "https://api.sageone.com",
-  "ClientId": "3d4d1c18be8c85837d72",
-  "ClientSecret": "2b267ffcb846289eff351f405a04c4196010bffb",
-  "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
-  "CallbackURL": "http://localhost:5000/Sage/Callback",
-  "AccessTokenURL": "https://api.sageone.com/oauth2/token",
+  "Email": {
+    //"SmtpServer": "smtp-pt.securemail.pro",
+    //"SmtpPort": 465,
+    //"SSL": true,
+    "SmtpServer": "smtp.damanojornal.com",
+    "SmtpPort": 25,
+    "SSL": false,
+    "SmtpUsername": "info@damanojornal.com",
+    "SmtpPassword": "DamaMail2018!",
+    "FromInfoEmail": "info@damanojornal.com",
+    "FromOrderEmail": "encomendas@damanojornal.com",
+    "CCEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
+  },
+  "Sage": {
+    "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
+    "SageApiBaseUrl": "https://api.sageone.com",
+    "ClientId": "3d4d1c18be8c85837d72",
+    "ClientSecret": "2b267ffcb846289eff351f405a04c4196010bffb",
+    "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
+    "CallbackURL": "http://localhost:5000/Sage/Callback",
+    "AccessTokenURL": "https://api.sageone.com/oauth2/token"
+  },
   "Authentication": {
     "Facebook": {
       "AppId": "198821157453249",
@@ -39,13 +43,6 @@
     "Google": {
       "ClientId": "562749217980-5qnk8tvg81qubi8oarv2oghs1bldq8nk.apps.googleusercontent.com",
       "ClientSecret": "sjNvCOZGG_nrjjIhYASkBewe"
-    }
-  },
-  "Tenants": {
-    "default": "damanojornal",
-    "tenants": {
-      "damanojornal.com": "damanojornal",
-      "saborcomtradicao.com": "saborcomtradicao"
     }
   },
   "Logging": {
