--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -11,13 +11,9 @@
       "Microsoft": "Information"
     }
   },
-  "SmtpServer": "smtp.damanojornal.com",
-  "SmtpPort": 25,
-  "SSL": false,
-  "SmtpUsername": "info@damanojornal.com",
-  "SmtpPassword": "DamaMail2018!",
-  "FromEmail": "info@damanojornal.com",
-  "ToEmails": "joaofbbg@gmail.com",
+  "Email": {
+    "CCEmails": "joaofbbg@gmail.com"
+  },
   "ApplicationInsights": {
     "InstrumentationKey": ""
   }
