--- a/src/Services/Dama.API/Dama.API.csproj
+++ b/src/Services/Dama.API/Dama.API.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <DockerTargetOS>Windows</DockerTargetOS>
+    <UserSecretsId>fa6f1af1-7524-47bb-85d7-cc5c9a8706e1</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
   </ItemGroup>
 
   <ItemGroup>
