--- a/src/Services/Dama.API/Dama.API.csproj
+++ b/src/Services/Dama.API/Dama.API.csproj
@@ -8,9 +8,9 @@
 
   <ItemGroup>
     
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
     
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.0.1916590" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
