--- a/src/Web/Backoffice/Backoffice.csproj
+++ b/src/Web/Backoffice/Backoffice.csproj
@@ -4,11 +4,11 @@
     <UserSecretsId>aspnet-Backoffice.RazorPages-BB76F8A8-4859-469C-967D-F7B558D53899</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="BuildBundlerMinifier" Version="2.8.391" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.6" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />    
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
   </ItemGroup>  
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\ApplicationCore\ApplicationCore.csproj" />
