--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -10,13 +10,20 @@
     }
   },
   "Email": {
-    "SmtpServer": "smtp.damanojornal.com",
-    "SmtpPort": 25,
-    "SSL": false,
-    "SmtpUsername": "info@damanojornal.com",
-    "SmtpPassword": "DamaMail2018!",
-    "FromInfoEmail": "info@damanojornal.com",
-    "FromOrderEmail": "encomendas@damanojornal.com",
+    //"SmtpServer": "smtp.damanojornal.com",
+    //"SmtpPort": 25,
+    //"SSL": false,
+    //"SmtpUsername": "info@damanojornal.com",
+    //"SmtpPassword": "DamaMail2018!",
+    //"FromInfoEmail": "info@damanojornal.com",
+    //"FromOrderEmail": "encomendas@damanojornal.com",
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SSL": true,
+    "SmtpUsername": "damanojornal@gmail.com",
+    "SmtpPassword": "Damamail2018!",
+    "FromInfoEmail": "damanojornal@gmail.com",
+    "FromOrderEmail": "damanojornal@gmail.com",
     "CCEmails": "joaofbbg@gmail.com,susana.m.mendez@gmail.com"
   },  
   "AllowedHosts": "*",
