--- a/src/Web/SalesWeb/SalesWeb.csproj
+++ b/src/Web/SalesWeb/SalesWeb.csproj
@@ -31,6 +31,9 @@
     <Content Update="Pages\NotFound.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
+    <Content Update="Pages\Shared\_StatusMessage.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
