SalesWeb: create invoice on sage Backoffice: create invoice on sage (WIP)

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -13,6 +13,7 @@
   "GroceryProductsPictureFullPath": "/var/aspnetcore/damabackoffice/wwwroot/images/products/",
   "GroceryProductsPictureUri": "https://backoffice.damanojornal.com/images/products/",
   "InvoicesFolderFullPath": "/var/aspnetcore/damabackoffice/invoices/",
+  "InvoiceGroceryNameFormat": "SaborComTradicaoFatura#{0}.pdf",
   "Email": {
     //"SmtpServer": "smtp-pt.securemail.pro",
     //"SmtpPort": 465,
