--- a/src/Web/SalesWeb/appsettings.json
+++ b/src/Web/SalesWeb/appsettings.json
@@ -36,10 +36,43 @@
   "Sage": {
     "AuthorizationURL": "https://www.sageone.com/oauth2/auth?response_type=code&client_id={0}&redirect_uri={1}&scope=full_access",
     "SageApiBaseUrl": "https://api.sageone.com",
+    "ClientApp": "SALESWEB",
     "ClientId": "a33817c02cd7523e58e8",
     "ClientSecret": "5bf1a4ec81068b81d1ddcd46fe001dc7eefe1bc8",
-    "SigningSecret": "9059ae44b05538700be0a402b15bd935092c0ce7 ",
+    "SigningSecret": "9059ae44b05538700be0a402b15bd935092c0ce7",
     "CallbackURL": "http://localhost:6500/Sage/Callback",
-    "AccessTokenURL": "https://api.sageone.com/oauth2/token"
+    "AccessTokenURL": "https://api.sageone.com/oauth2/token",
+    //"Clients": [
+    //  {
+    //    "Application": "SALESWEB",
+    //    "ClientId": "a33817c02cd7523e58e8",
+    //    "ClientSecret": "5bf1a4ec81068b81d1ddcd46fe001dc7eefe1bc8",
+    //    "SigningSecret": "9059ae44b05538700be0a402b15bd935092c0ce7",
+    //    "SageBankings": [
+    //      {
+    //        "Type": "CASH",
+    //        "SageTypeId": "5",
+    //        "BankId": "97574"
+    //      },
+    //      {
+    //        "Type": "TRANSFER",
+    //        "SageTypeId": "4",
+    //        "BankId": "97573"
+    //      }
+    //    ]
+    //  },
+    "SageBankings":
+    [
+      {
+        "Type": "CASH",
+        "SageTypeId": "5",
+        "BankId": "97574"
+      },
+      {
+        "Type": "TRANSFER",
+        "SageTypeId": "4",
+        "BankId": "97573"
+      }
+    ]
   }
 }
