--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -34,7 +34,19 @@
     "ClientSecret": "2b267ffcb846289eff351f405a04c4196010bffb",
     "SigningSecret": "7d84c4209d73e2f7b2f6d0bb7964d4f9e870c1f0",
     "CallbackURL": "http://localhost:5000/Sage/Callback",
-    "AccessTokenURL": "https://api.sageone.com/oauth2/token"
+    "AccessTokenURL": "https://api.sageone.com/oauth2/token",
+    "SageBankings": [
+      {
+        "Type": "CASH",
+        "SageTypeId": "5",
+        "BankId": "97574"
+      },
+      {
+        "Type": "TRANSFER",
+        "SageTypeId": "4",
+        "BankId": "97573"
+      }
+    ]
   },
   "Authentication": {
     "Facebook": {
