add test invoice

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -16,12 +16,15 @@
   "Email": {
     "CCEmails": "joaofbbg@gmail.com"
   },
-    "Logging": {
-      "IncludeScopes": false,
-      "LogLevel": {
-        "Default": "Debug",
-        "System": "Information",
-        "Microsoft": "Information"
-      }
+  "Sage": {
+    "AuthorizationURL": "http://localhost:5000/Sage/Callback?code=dummycode"
+  },
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
+}
