add manual product

--- a/src/Web/SalesWeb/appsettings.Development.json
+++ b/src/Web/SalesWeb/appsettings.Development.json
@@ -11,7 +11,10 @@
       "Microsoft": "Information"
     }
   },
-  "Email": {    
+  "Sage": {
+    "AuthorizationURL": "http://localhost:6500/Sage/Callback?code=dummycode"
+  },
+  "Email": {
     "CCEmails": "joaofbbg@gmail.com"
   },
   "ApplicationInsights": {
