--- a/src/Web/SalesWeb/bundleconfig.json
+++ b/src/Web/SalesWeb/bundleconfig.json
@@ -13,14 +13,17 @@
       "wwwroot/css/basket/basket-status/basket-status.component.css",
       "wwwroot/css/orders/orders.component.css",
       "wwwroot/lib/slick/slick.css",
-      "wwwroot/lib/slick/slick-theme.css"
+      "wwwroot/lib/slick/slick-theme.css",
+      "wwwroot/lib/select2/css/select2.css",
+      "wwwroot/lib/select2-bootstrap4/select2-bootstrap4.css"
     ]
   },
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js",
-      "wwwroot/lib/slick/slick.js"
+      "wwwroot/lib/slick/slick.js",
+      "wwwroot/lib/select2/js/select2.js"
     ],
     // Optionally specify minification options
     "minify": {
