Change Development Database to Sql Server; small changes to customize items

--- a/src/Web/DamaWeb/appsettings.Staging.json
+++ b/src/Web/DamaWeb/appsettings.Staging.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=(localdb)\\mssqllocaldb;Database=js_damashopweb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=js_identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DamaShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
+    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018"
   },
   "CatalogBaseUrl": "http://localhost:5500/images/",
   "Logging": {
