--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -5,14 +5,14 @@
     "GroceryConnection": "Server=(localdb)\\mssqllocaldb;Database=js_grocery;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
-  "WebNewsPictureFullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\news\\",
+  "WebNewsPictureFullPath": "wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:5500/images/products/",
-  "WebProductsPictureFullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\products\\",
+  "WebProductsPictureFullPath": "wwwroot\\images\\products\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
-  "WebProductTypesPictureFullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\",
-  "GroceryProductsPictureFullPath": "D:\\Work\\adama\\src\\Web\\Backoffice\\wwwroot\\images\\products\\",
+  "WebProductTypesPictureFullPath": "wwwroot\\images\\producttypes\\",
+  "GroceryProductsPictureFullPath": "wwwroot\\images\\products\\",
   "GroceryProductsPictureUri": "http://localhost:5000/images/products/",
-  "InvoicesFolderFullPath": "D:\\Work\\adama\\invoices\\",
+  "InvoicesFolderFullPath": "..\\..\\..\\invoices\\",
   "Email": {
     "CCEmails": "joaofbbg@gmail.com"
   },
