--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -5,12 +5,12 @@
     "GroceryConnection": "Server=(localdb)\\mssqllocaldb;Database=js_grocery;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
-  "WebNewsPictureFullPath": "wwwroot\\images\\news\\",
+  "WebNewsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:5500/images/products/",
-  "WebProductsPictureFullPath": "wwwroot\\images\\products\\",
+  "WebProductsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\products\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
-  "WebProductTypesPictureFullPath": "wwwroot\\images\\producttypes\\",
-  "GroceryProductsPictureFullPath": "wwwroot\\images\\products\\",
+  "WebProductTypesPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\producttypes\\",
+  "GroceryProductsPictureFullPath": "..\\SalesWeb\\wwwroot\\images\\products\\",
   "GroceryProductsPictureUri": "http://localhost:5000/images/products/",
   "InvoicesFolderFullPath": "..\\..\\..\\invoices\\",
   "Email": {
