Add ignore columns on Grocery Context update DEV db to use MySQL

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaConnection": "Server=(localdb)\\mssqllocaldb;Database=js_damashopweb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=js_identity;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "GroceryConnection": "Server=(localdb)\\mssqllocaldb;Database=js_grocery;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DamaConnection": "Server=localhost;Database=js_damashopweb;Uid=root;Pwd=1234",
+    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234",
+    "GroceryConnection": "Server=localhost;Database=js_grocery;Uid=root;Pwd=1234"
   },
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
   "WebNewsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\news\\",
