--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_identity;Uid=jsdamauser;Pwd=dama#user!2018",
-    "GroceryConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_grocery;Uid=jsdamauser;Pwd=dama#user!2018"
+    "DamaConnection": "",
+    "IdentityConnection": "",
+    "GroceryConnection": ""
   },
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
