--- a/src/Web/SalesWeb/appsettings.Development.json
+++ b/src/Web/SalesWeb/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "SalesShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_grocery;Uid=jsdamauser;Pwd=dama#user!2018",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_dev_identity;Uid=jsdamauser;Pwd=dama#user!2018"
+    "SalesShopConnection": "Server=localhost;Database=js_grocery;Uid=root;Pwd=1234",
+    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234"
   },
   "CatalogBaseUrl": "http://localhost:6500/images/",
   "Logging": {
