--- a/src/Web/SalesWeb/appsettings.json
+++ b/src/Web/SalesWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "SalesShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_grocery;Uid=jsdamauser;Pwd=dama#user!2018",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_identity;Uid=jsdamauser;Pwd=dama#user!2018"
+    "SalesShopConnection": "",
+    "IdentityConnection": ""
   },
   "CatalogBaseUrl": "https://backoffice.damanojornal.com/images/products",
   "Logging": {
