--- a/src/Web/DamaWeb/appsettings.Development.json
+++ b/src/Web/DamaWeb/appsettings.Development.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=(localdb)\\mssqllocaldb;Database=js_damashopweb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=js_identity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DamaShopConnection": "Server=localhost;Database=js_damashopweb;Uid=root;Pwd=1234",
+    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234"
   },
   "CatalogBaseUrl": "http://localhost:5500/images/",
   "Logging": {
@@ -11,7 +11,7 @@
       "Microsoft": "Information"
     }
   },
-  "Email": {    
+  "Email": {
     "CCEmails": "joaofbbg@gmail.com"
   },
   "ApplicationInsights": {
