--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DamaShopConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_damashopweb;Uid=jsdamauser;Pwd=dama#user!2018",
-    "IdentityConnection": "Server=jsmysql.cs9a24gapob9.eu-central-1.rds.amazonaws.com;Database=js_identity;Uid=jsdamauser;Pwd=dama#user!2018"
+    "DamaShopConnection": "",
+    "IdentityConnection": ""
   },
   "CatalogBaseUrl": "https://www.damanojornal.com/loja/images/",
   "Logging": {
