--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -1,8 +1,8 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaConnection": "Server=localhost;Database=js_damashopweb;Uid=root;Pwd=1234",
-    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234",
-    "GroceryConnection": "Server=localhost;Database=js_grocery;Uid=root;Pwd=1234"
+    "DamaConnection": "Server=localhost;Database=js_damashopweb;Uid=root;Pwd=1234;",
+    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234;",
+    "GroceryConnection": "Server=localhost;Database=js_grocery;Uid=root;Pwd=1234;"
   },
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
   "WebNewsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\news\\",
