--- a/src/Web/DamaWeb/bundleconfig.json
+++ b/src/Web/DamaWeb/bundleconfig.json
@@ -7,11 +7,14 @@
     "inputFiles": [
       "wwwroot/css/app.css",
       "wwwroot/css/app.component.css",
+      "wwwroot/css/shared/header.css",
+      "wwwroot/css/shared/footer.css",
       "wwwroot/css/basket/basket.component.css",
       "wwwroot/css/catalog/pager.css",
-      "wwwroot/css/catalog/catalog.component.css",
+      "wwwroot/css/catalog/catalog.css",
       "wwwroot/css/basket/basket-status/basket-status.component.css",
       "wwwroot/css/orders/orders.component.css",
+      "wwwroot/css/customize/customize.css",
       "wwwroot/lib/slick/slick.css",
       "wwwroot/lib/slick/slick-theme.css"
     ]
