--- a/src/Web/DamaWeb/package.json
+++ b/src/Web/DamaWeb/package.json
@@ -1,6 +1,10 @@
 {
-  "devDependencies": {
-    "gulp": "3.9.1",
-    "gulp-sass": "3.1.0"
-  }
+  "version": "1.0.0",
+  "name": "myatla",
+  "private": true,
+  "dependencies": {
+    "bootstrap": "4.1.1"
+  },
+  "devDependencies": {}
+
 }
