--- a/src/Web/DamaWeb/bundleconfig.json
+++ b/src/Web/DamaWeb/bundleconfig.json
@@ -5,9 +5,7 @@
     "outputFileName": "wwwroot/css/site.min.css",
     // An array of relative input file paths. Globbing patterns supported
     "inputFiles": [
-      "wwwroot/lib/bootstrap/css/bootstrap.css",
       "wwwroot/css/site.css",
-      "wwwroot/css/site.component.css",
       "wwwroot/css/shared/header.css",
       "wwwroot/css/shared/footer.css",
       "wwwroot/css/basket/basket.component.css",
@@ -16,15 +14,15 @@
       "wwwroot/css/basket/basket-status/basket-status.component.css",
       "wwwroot/css/orders/orders.component.css",
       "wwwroot/css/customize/customize.css",
-      "wwwroot/lib/slick/slick.css",
-      "wwwroot/lib/slick/slick-theme.css"
+      "wwwroot/lib/slick-carousel/slick.css",
+      "wwwroot/lib/slick-carousel/slick-theme.css"
     ]
   },
   {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js",
-      "wwwroot/lib/slick/slick.js"
+      "wwwroot/lib/slick-carousel/slick.js"
     ],
     // Optionally specify minification options
     "minify": {
