add slick missing files

--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DamaShopConnection": "",
-    "IdentityConnection": ""
+    "DamaShopConnection": "Server=localhost;Database=js_damashopweb;Uid=root;Pwd=1234",
+    "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234"
   },
   "CatalogBaseUrl": "https://www.damanojornal.com/loja/images/",
   "Logging": {
