change backoffice save images to use imagesharp

--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -7,7 +7,9 @@
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
   "WebNewsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:5500/images/products/",
+  "WebProductsPictureV2Uri": "http://localhost:5500/images/products/v2/",
   "WebProductsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\products\\",
+  "WebProductsPictureV2FullPath": "..\\DamaWeb\\wwwroot\\images\\products\\v2\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
   "WebProductTypesPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\producttypes\\",
   "GroceryProductsPictureFullPath": "..\\SalesWeb\\wwwroot\\images\\products\\",
