--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -7,7 +7,9 @@
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
   "WebProductsPictureUri": "https://www.damanojornal.com/loja/images/products/",
+  "WebProductsPictureV2Uri": "https://www.damanojornal.com/loja/images/products/v2/",
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
+  "WebProductsPictureV2FullPath": "/var/aspnetcore/damashop/wwwroot/images/products/v2/",
   "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
   "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
   "GroceryProductsPictureFullPath": "/var/aspnetcore/damabackoffice/wwwroot/images/products/",
