imagesharp set and ready

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -11,7 +11,9 @@
   "WebProductsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/products/",
   "WebProductsPictureV2FullPath": "/var/aspnetcore/damashop/wwwroot/images/products/v2/",
   "WebProductTypesPictureUri": "https://www.damanojornal.com/loja/images/producttypes/",
+  "WebProductTypesPictureV2Uri": "https://www.damanojornal.com/loja/images/producttypes/v2/",
   "WebProductTypesPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/",
+  "WebProductTypesPictureV2FullPath": "/var/aspnetcore/damashop/wwwroot/images/producttypes/v2/",
   "GroceryProductsPictureFullPath": "/var/aspnetcore/damabackoffice/wwwroot/images/products/",
   "GroceryProductsPictureUri": "https://backoffice.damanojornal.com/images/products/",
   "InvoicesFolderFullPath": "/var/aspnetcore/damabackoffice/invoices/",
