--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -11,7 +11,9 @@
   "WebProductsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\products\\",
   "WebProductsPictureV2FullPath": "..\\DamaWeb\\wwwroot\\images\\products\\v2\\",
   "WebProductTypesPictureUri": "http://localhost:5500/images/producttypes/",
+  "WebProductTypesPictureV2Uri": "http://localhost:5500/images/producttypes/v2/",
   "WebProductTypesPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\producttypes\\",
+  "WebProductTypesPictureV2FullPath": "..\\DamaWeb\\wwwroot\\images\\producttypes\\v2\\",
   "GroceryProductsPictureFullPath": "..\\SalesWeb\\wwwroot\\images\\products\\",
   "GroceryProductsPictureUri": "http://localhost:5000/images/products/",
   "InvoicesFolderFullPath": "..\\..\\..\\invoices\\",
