--- a/src/Web/Backoffice/appsettings.Development.json
+++ b/src/Web/Backoffice/appsettings.Development.json
@@ -4,6 +4,7 @@
     "IdentityConnection": "Server=localhost;Database=js_identity;Uid=root;Pwd=1234;",
     "GroceryConnection": "Server=localhost;Database=js_grocery;Uid=root;Pwd=1234;"
   },
+  "WebPicturesFullPath": "..\\DamaWeb\\wwwroot\\images\\",
   "WebNewsPictureUri": "http://localhost:5500/images/news/",
   "WebNewsPictureFullPath": "..\\DamaWeb\\wwwroot\\images\\news\\",
   "WebProductsPictureUri": "http://localhost:5500/images/products/",
