--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -4,6 +4,7 @@
     "IdentityConnection": "",
     "GroceryConnection": ""
   },
+  "WebPicturesFullPath": "/var/aspnetcore/damashop/wwwroot/images/",
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
   "WebNewsPictureFullPath": "/var/aspnetcore/damashop/wwwroot/images/news/",
   "WebProductsPictureUri": "https://www.damanojornal.com/loja/images/products/",
