--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -36,12 +36,12 @@
   },
   "Authentication": {
     "Facebook": {
-      "AppId": "198821157453249",
-      "AppSecret": "6fda7445bb7f5f9395cf8fc019e6aa41"
+      "AppId": "",
+      "AppSecret": ""
     },
     "Google": {
-      "ClientId": "562749217980-5qnk8tvg81qubi8oarv2oghs1bldq8nk.apps.googleusercontent.com",
-      "ClientSecret": "sjNvCOZGG_nrjjIhYASkBewe"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   }
 }
