Add unavailable products

--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -24,12 +24,12 @@
   },
   "Authentication": {
     "Facebook": {
-      "AppId": "",
-      "AppSecret": ""
+      "AppId": "APP_ID_HERE",
+      "AppSecret": "APP_SECRET_HERE"
     },
     "Google": {
-      "ClientId": "",
-      "ClientSecret": ""
+      "ClientId": "CLIENT_ID_HERE",
+      "ClientSecret": "CLIENT_SECRET_HERE"
     }
   },
   "Logging": {
