--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -16,9 +16,9 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore DamaNoJornal.sln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build DamaNoJornal.sln --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
     - name: Publish
