--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Build
       run: dotnet build DamaNoJornal.sln --no-restore --configuration Release
     - name: Test
-      run: dotnet test tests/UnitTests/UnitTests.csproj --no-build --verbosity normal
+      run: dotnet test tests/UnitTests/UnitTests.csproj --verbosity normal
     - name: Publish
       run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --self-contained false --configuration Release --output '/publish'
     - name: Archive Release
