--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -22,7 +22,7 @@ jobs:
     - name: Test
       run: dotnet test tests/UnitTests/UnitTests.csproj --verbosity normal
     - name: Publish
-      run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --self-contained false --configuration Release --output '/publish'
+      run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --configuration Release --output '/publish' --no-self-contained
     - name: Archive Release
       uses: thedoctor0/zip-release@master
       with:
