--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -22,13 +22,13 @@ jobs:
     - name: Test
       run: dotnet test tests/UnitTests/UnitTests.csproj --verbosity normal
     - name: Publish
-      run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --configuration Release --output 'artifact' --no-self-contained
-    - name: Archive Release
-      uses: thedoctor0/zip-release@master
-      with:
-        filename: 'DamaWeb.zip'
-        path: artifact
+      run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --configuration Release --output 'DamaWeb' --no-self-contained
+    #- name: Archive Release
+    #  uses: thedoctor0/zip-release@master
+    #  with:
+    #    filename: 'DamaWeb.zip'
+    #    path: artifact
     - uses: actions/upload-artifact@v2
       with:
         name: drop
-        path: 'DamaWeb.zip'
+        path: 'DamaWeb/'
