--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -45,4 +45,6 @@ jobs:
         name: drop
         # Destination path
         path: /home/azureuser/deploy/
+    - name: Deploy DamaShop
+      run: /home/azureuser/deploy/shopDeploy.sh
   
