--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -35,7 +35,10 @@ jobs:
   
   deploy:
     needs: build
-    runs-on: self-hosted    
+    runs-on: self-hosted  
+    
+    env:
+      SERVER: Production
     
     steps:
     - name: Download a Build Artifact
@@ -52,8 +55,8 @@ jobs:
       with:
         files: '/home/azureuser/deploy/damashop/files/DamaWeb/appsettings.json'      
       env:        
-        ApplicationInsights.InstrumentationKey: ${{ secrets.APPLICATIONINSIGHTSKEY }}
-        Authentication.Facebook.AppId: ${{ secrets.FACEBOOKAPPID }}
+        ApplicationInsights.InstrumentationKey: ${{ env.APPLICATIONINSIGHTSKEY }}
+        Authentication.Facebook.AppId: ${{ env.FACEBOOKAPPID }}
         Email.SmtpServer: 'smtp.damanojornal.com'
     - name: Deploy DamaShop
       run: /home/azureuser/deploy/shopDeploy.sh
