--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -66,7 +66,7 @@ jobs:
         ApplicationInsights.InstrumentationKey: ${{ secrets.APPLICATIONINSIGHTSKEY }}
         Authentication.Facebook.AppId: ${{ secrets.FACEBOOKAPPID }}
         Authentication.Facebook.AppSecret: ${{ secrets.FACEBOOKAPPSECRET }}
-        Authentication.Goolgle.ClientId: ${{ secrets.GOOGLECLIENTID }}
-        Authentication.Goolgle.ClientSecret: ${{ secrets.GOOGLECLIENTSECRET }}
+        Authentication.Google.ClientId: ${{ secrets.GOOGLECLIENTID }}
+        Authentication.Google.ClientSecret: ${{ secrets.GOOGLECLIENTSECRET }}
     - name: Deploy DamaShop
       run: /home/azureuser/deploy/shopDeploy.sh
