--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -21,17 +21,26 @@ jobs:
       run: dotnet build DamaNoJornal.sln --no-restore --configuration Release
     - name: Test
       run: dotnet test tests/UnitTests/UnitTests.csproj --verbosity normal
-    - name: Publish
+    - name: Publish Web
       run: dotnet publish src/Web/DamaWeb/DamaWeb.csproj --runtime linux-x64 --configuration Release --output 'DamaWeb' --no-self-contained
-    - name: Archive Release
+    - name: Publish Backoffice
+      run: dotnet publish src/Web/Backoffice/Backoffice.csproj --runtime linux-x64 --configuration Release --output 'Backoffice' --no-self-contained
+    - name: Zip DamaWeb Release
       uses: thedoctor0/zip-release@master
       with:
         filename: 'DamaWeb.zip'
         path: DamaWeb
+    - name: Zip Backoffice Release
+      uses: thedoctor0/zip-release@master
+      with:
+        filename: 'Backoffice.zip'
+        path: Backoffice
     - uses: actions/upload-artifact@v2
       with:
         name: drop
-        path: 'DamaWeb.zip'
+        path: |
+          'DamaWeb.zip'
+          'Backoffice.zip'
   
   deploy:
     needs: build
@@ -45,12 +54,14 @@ jobs:
         name: drop
         # Destination path
         path: /home/azureuser/deploy/
-    - name: Unzip Artifact
+    - name: Unzip Dama Web Artifact
       run: unzip ~/deploy/DamaWeb.zip -d ~/deploy/damashop/files/
+    - name: Unzip Backoffice
+      run: unzip ~/deploy/Backoffice.zip -d ~/deploy/backoffice/files/
     - name: AppSettings substituion
       uses: microsoft/variable-substitution@v1 
       with:
-        files: '/home/azureuser/deploy/damashop/files/DamaWeb/appsettings.json'      
+        files: '/home/azureuser/deploy/damashop/files/DamaWeb/appsettings.json, /home/azureuser/deploy/damashop/files/Backoffice/appsettings.json'      
       env:        
         ConnectionStrings.DamaShopConnection: ${{ secrets.DAMASHOPCONNECTIONSTRING }}
         ConnectionStrings.IdentityConnection: ${{ secrets.IDENTITYCONNECTIONSTRING }}
@@ -68,5 +79,11 @@ jobs:
         Authentication.Facebook.AppSecret: ${{ secrets.FACEBOOKAPPSECRET }}
         Authentication.Google.ClientId: ${{ secrets.GOOGLECLIENTID }}
         Authentication.Google.ClientSecret: ${{ secrets.GOOGLECLIENTSECRET }}
+        Sage.ClientId: ${{ secrets.SAGECLIENTID }}
+        Sage.ClientSecret: ${{ secrets.SAGECLIENTSECRET }}
+        Sage.SigningSecret: ${{ secrets.SAGESIGNINGSECRET }}
     - name: Deploy DamaShop
       run: /home/azureuser/deploy/shopDeploy.sh
+    - name: Copy Backoffice files to directory
+      run: sudo rsync -a ~/deploy/backoffice/files/*  /var/aspnetcore/backoffice/
+    
