--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -38,10 +38,8 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: drop
-        path: |
-          'DamaWeb.zip'
-          'Backoffice.zip'
-  
+        path: '*.zip'          
+        if-no-files-found: error
   deploy:
     needs: build
     runs-on: self-hosted  
