--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -80,8 +80,22 @@ jobs:
         Sage.ClientId: ${{ secrets.SAGECLIENTID }}
         Sage.ClientSecret: ${{ secrets.SAGECLIENTSECRET }}
         Sage.SigningSecret: ${{ secrets.SAGESIGNINGSECRET }}
-    - name: Deploy DamaShop
-      run: /home/azureuser/deploy/shopDeploy.sh
+    #- name: Deploy DamaShop
+    #  run: /home/azureuser/deploy/shopDeploy.sh
+    - name: Stop Service damaShop
+      run: sudo service damashop stop
+    - name: Copy DamaShop files to directory
+      run: sudo rsync -a ~/deploy/damashop/files/DamaWeb/*  /var/aspnetcore/damashop/
+    - name: Start Service damashop
+      run: sudo service damashop start
+    - name: Remove DamaShop temp files
+      run: rm -rf ~/deploy/damashop/files/*
+    - name: Stop Service Backoffice
+      run: sudo service backoffice stop
     - name: Copy Backoffice files to directory
       run: sudo rsync -a ~/deploy/backoffice/files/Backoffice/*  /var/aspnetcore/backoffice/
+    - name: Start Service Backoffice
+      run: sudo service backoffice start
+    - name: Remove Backoffice temp files
+      run: rm -rf ~/deploy/backoffice/files/
     
