--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DamaConnection": "",
+    "DamaShopConnection": "",
     "IdentityConnection": "",
     "GroceryConnection": ""
   },
