--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -90,12 +90,12 @@ jobs:
       run: sudo service damashop start
     - name: Remove DamaShop temp files
       run: rm -rf ~/deploy/damashop/files/*
-    - name: Stop Service Backoffice
-      run: sudo service backoffice stop
+    #- name: Stop Service Backoffice
+    #  run: sudo service backoffice stop
     - name: Copy Backoffice files to directory
       run: sudo rsync -a ~/deploy/backoffice/files/Backoffice/*  /var/aspnetcore/backoffice/
-    - name: Start Service Backoffice
-      run: sudo service backoffice start
+    #- name: Start Service Backoffice
+    #  run: sudo service backoffice start
     - name: Remove Backoffice temp files
-      run: rm -rf ~/deploy/backoffice/files/
+      run: rm -rf ~/deploy/backoffice/files/*
     
