--- a/.github/workflows/dotnet-build-deploy.yml
+++ b/.github/workflows/dotnet-build-deploy.yml
@@ -64,6 +64,8 @@ jobs:
         ConnectionStrings.DamaShopConnection: ${{ secrets.DAMASHOPCONNECTIONSTRING }}
         ConnectionStrings.IdentityConnection: ${{ secrets.IDENTITYCONNECTIONSTRING }}
         Email.SmtpServer: ${{ secrets.SMTPSERVER }}
+        Email.SmtpPort: ${{ secrets.SMTPPORT}}
+        SSL: true
         Email.SmtpUsername: ${{ secrets.SMTPUSERNAME }}
         Email.SmtpPassword: ${{ secrets.SMTPPASSWORD }}
         Email.FromInfoEmail: ${{ secrets.FROMINFOEMAIL }}
