Upgrade to Ardalis.Specification 5.1 nuget package

--- a/src/Web/Backoffice/appsettings.json
+++ b/src/Web/Backoffice/appsettings.json
@@ -1,8 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "DamaShopConnection": "",
-    "IdentityConnection": "",
-    "GroceryConnection": ""
+    "IdentityConnection": ""    
   },
   "WebPicturesFullPath": "/var/aspnetcore/damashop/wwwroot/images/",
   "WebNewsPictureUri": "https://www.damanojornal.com/loja/images/news/",
