Cupão de Desconto

--- a/src/Web/DamaWeb/appsettings.json
+++ b/src/Web/DamaWeb/appsettings.json
@@ -5,7 +5,7 @@
   },
   "CatalogBaseUrl": "https://www.damanojornal.com/loja/images/",  
   "Email": {
-    "SmtpServer": "",
+    "SmtpServer": "127.0.0.1",
     "SmtpPort": 25,
     "SSL": false,
     "SmtpUsername": "",
