--- a/src/Web/DamaAdmin/Server/appsettings.json
+++ b/src/Web/DamaAdmin/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DamaShopConnection": ""
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "",
