--- a/src/Web/DamaAdmin/Client/DamaAdmin.Client.csproj
+++ b/src/Web/DamaAdmin/Client/DamaAdmin.Client.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Shared\DamaAdmin.Shared.csproj" />
+    <ProjectReference Include="..\..\..\ApplicationCore\ApplicationCore.csproj" />
   </ItemGroup>
 
 </Project>
