--- a/src/Web/DamaAdmin/Server/appsettings.json
+++ b/src/Web/DamaAdmin/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DamaShopConnection": ""
+    "DamaShopConnection": "Server=localhost;User Id=root;Password=1234;Database=js_damashopweb"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
