--- a/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj
+++ b/src/Web/DamaAdmin/Server/DamaAdmin.Server.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Client\DamaAdmin.Client.csproj" />
-    <ProjectReference Include="..\..\..\ApplicationCore\ApplicationCore.csproj" />
+    <ProjectReference Include="..\Shared\DamaAdmin.Shared.csproj" />
     <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
