--- a/src/Web/DamaAdmin/Client/wwwroot/appsettings.json
+++ b/src/Web/DamaAdmin/Client/wwwroot/appsettings.json
@@ -5,5 +5,7 @@
     "ValidateAuthority": true,
     "Audience": "https://joaofbbghotmail.onmicrosoft.com/9d3096da-2124-4f26-ae80-9f324bbe3785"
   },
-  "DefaultScope": "api://9d3096da-2124-4f26-ae80-9f324bbe3785/API.Access"
+  "DefaultScope": "api://9d3096da-2124-4f26-ae80-9f324bbe3785/API.Access",
+  "WebProductTypesPictureV2Uri": "http://localhost:5500/images/producttypes/v2/",
+  "WebProductTypesPictureV2FullPath": "D:\\Work\\adama\\src\\Web\\DamaWeb\\wwwroot\\images\\producttypes\\v2\\"
 }
